[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vcf_compare"
dynamic = ["version"]
description = "Tool for comparing VCFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "cyvcf2>=0.14.2",
    "matplotlib",
    "simple-venn>=0.2.1"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.6",
]

[tool.setuptools.dynamic]
version = {attr = "vcf_compare.__version__"}

[tool.ruff]
line-length = 120

[project.scripts]
venn-compare="vcf_compare.cli:venn_compare"
